test/scc_test/exp/semantic-errors/077.t
void test()
{
    struct {int x;} a;
    1 && a;
}